--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0 auto;
             padding: 20px;
             background-color: #f0f0f0;
+            transition: all 0.3s ease;
         }
         .script-section {
             background-color: white;
@@ -20,12 +21,14 @@
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            position: relative;
+            z-index: 1;
         }
         .script-section:hover {
             transform: translateY(-5px);
             box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         }
-        h2 {
+        h2, h3 {
             color: #333;
             padding: 20px 0;
             margin: 0;
@@ -34,7 +37,7 @@
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
         }
-        .script-section:hover h2 {
+        .script-section:hover h2, .script-details:hover h2 {
             background-color: #d0d0d0;
         }
         .video-container {
@@ -66,6 +69,7 @@
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
+            cursor: pointer;
         }
         .get-script-btn:hover {
             background-color: #0056b3;
@@ -90,121 +94,156 @@
         .get-script-btn:active::after {
             animation: ripple 0.6s ease-out;
         }
-        @keyframes ripple {
-            0% {
-                transform: scale(0, 0);
-                opacity: 1;
-            }
-            20% {
-                transform: scale(25, 25);
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-                transform: scale(40, 40);
-            }
-        }
-        .menu-btn {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            cursor: pointer;
-            z-index: 1001;
-            background-color: rgba(255, 255, 255, 0.7);
-            padding: 10px;
-            border-radius: 5px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 30px;
-            height: 21px;
-        }
-        .menu-btn div {
-            width: 100%;
-            height: 3px;
-            background-color: #333;
-            transition: all 0.3s ease;
-        }
-        .menu {
+        .expanded {
             position: fixed;
             top: 0;
-            right: -250px;
-            width: 250px;
+            left: 0;
+            width: 100%;
             height: 100%;
-            background-color: #333;
-            padding-top: 60px;
-            transition: 0.3s;
+            background-color: white;
             z-index: 1000;
-        }
-        .menu.active {
-            right: 0;
-        }
-        .menu a {
-            padding: 15px 25px;
-            text-decoration: none;
-            font-size: 18px;
-            color: #fff;
-            display: block;
-            transition: 0.3s;
-        }
-        .menu a:hover {
-            background-color: #444;
+            overflow: auto;
+            padding: 20px;
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         }
     </style>
 </head>
 <body>
-    <div class="menu-btn" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    
-    <div class="menu" id="menu">
-        <a href="/home">Home</a>
-        <a href="/scripts">Scripts</a>
-        <a href="/thanks-donation">Support me</a>
-    </div>
-
-    <div class="script-section">
+    <!-- SCRIPTS SECTIONS -->
+    <div id="renzxw" class="script-section">
         <h2>RenzXW LOCK</h2>
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SrSuzTxhIqk?si=5X8otWXtptp6xX7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="https://rekonise.com/renzxw-camlock-oen3d" class="get-script-btn">GET SCRIPT HERE</a>
+        <a href="#" class="get-script-btn" onclick="expandOrRedirect('renzxw', 'https://rekonise.com/renzxw-camlock-oen3d')">GET SCRIPT HERE</a>
     </div>
 
-    <div class="script-section">
+    <div id="sanderx" class="script-section">
         <h2>SanderX Hub</h2>
-        <h3>brookhaven RP</h3>
+        <h3>Brookhaven RP</h3>
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/0HJ3XIQ-JTA?si=xRM4cY3DiARb1_6S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="https://linkvertise.com/1205108/sander-x-brookhaven-hack" class="get-script-btn">GET SCRIPT HERE</a>
+        <a href="#" class="get-script-btn" onclick="expandOrRedirect('sanderx', 'https://linkvertise.com/1205108/sander-x-brookhaven-hack')">GET SCRIPT HERE</a>
     </div>
 
-    <div class="script-section">
+    <div id="symphony" class="script-section">
         <h2>Symphony HUB</h2>
         <h3>Murder Mystery 2</h3>
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UTP3JKthFhg?si=k3Zb7y6mRvroM4Z9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="https://example.com/script3" class="get-script-btn">GET SCRIPT HERE</a>
+        <a href="#" class="get-script-btn" onclick="expandOrRedirect('symphony', 'https://example.com/script3')">GET SCRIPT HERE</a>
     </div>
 
-    <div class="script-section">
+    <div id="redz" class="script-section">
         <h2>REDz HUB</h2>
         <h3>Brookhaven RP</h3>
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/zeYmj7_ukUk?si=I9mCcqciaISWjHel" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="https://example.com/script3" class="get-script-btn">GET SCRIPT HERE</a>
+        <a href="#" class="get-script-btn" onclick="expandOrRedirect('redz', 'https://example.com/script4')">GET SCRIPT HERE</a>
     </div>
 
-
     <script>
-        function toggleMenu() {
-            document.getElementById("menu").classList.toggle("active");
+        // Variable to track the number of clicks
+        var clickCounts = {};
+
+        function expandOrRedirect(id, link) {
+            // Initialize click count for this section if not already done
+            if (!clickCounts[id]) {
+                clickCounts[id] = 0;
+            }
+
+            // Increment the click count
+            clickCounts[id]++;
+
+            // If it's the first click, expand the section
+            if (clickCounts[id] === 1) {
+                document.querySelectorAll('.script-section').forEach(section => {
+                    section.classList.remove('expanded');
+                });
+
+                var selectedSection = document.getElementById(id);
+                selectedSection.classList.add('expanded');
+            } 
+            // If it's the second click, redirect to the link
+            else if (clickCounts[id] === 2) {
+                window.location.href = link;
+            }
         }
     </script>
+    <div class="menu-btn" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+
+<div class="menu" id="menu">
+    <a href="/home">Home</a>
+    <a href="/scripts">Scripts</a>
+    <a href="/thanks-donation">Support me</a>
+    <a href="/donation">donate me</a>
+</div>
+
+<style>
+    .menu-btn {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        z-index: 1001;
+        background-color: rgba(255, 255, 255, 0.7);
+        padding: 10px;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 21px;
+    }
+
+    .menu-btn div {
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        transition: all 0.3s ease;
+    }
+
+    .menu {
+        position: fixed;
+        top: 0;
+        right: -250px;
+        width: 250px;
+        height: 100%;
+        background-color: #333;
+        padding-top: 60px;
+        transition: 0.3s;
+        z-index: 1000;
+    }
+
+    .menu.active {
+        right: 0;
+    }
+
+    .menu a {
+        padding: 15px 25px;
+        text-decoration: none;
+        font-size: 18px;
+        color: #fff;
+        display: block;
+        transition: 0.3s;
+    }
+
+    .menu a:hover {
+        background-color: #444;
+    }
+</style>
+
+<script>
+    function toggleMenu() {
+        document.getElementById("menu").classList.toggle("active");
+    }
+</script>
 </body>
 </html>
