--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SrSuzTxhIqk?si=5X8otWXtptp6xX7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#" class="get-script-btn" onclick="expandOrRedirect('renzxw', 'https://rekonise.com/renzxw-camlock-oen3d')">GET SCRIPT HERE</a>
+        <a href="#renzxw" class="get-script-btn" onclick="expandOrRedirect(event, 'renzxw', 'https://rekonise.com/renzxw-camlock-oen3d')">GET SCRIPT HERE</a>
     </div>
 
     <div id="sanderx" class="script-section">
@@ -124,7 +124,7 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/0HJ3XIQ-JTA?si=xRM4cY3DiARb1_6S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#" class="get-script-btn" onclick="expandOrRedirect('sanderx', 'https://linkvertise.com/1205108/sander-x-brookhaven-hack')">GET SCRIPT HERE</a>
+        <a href="#sanderx" class="get-script-btn" onclick="expandOrRedirect(event, 'sanderx', 'https://linkvertise.com/1205108/sander-x-brookhaven-hack')">GET SCRIPT HERE</a>
     </div>
 
     <div id="symphony" class="script-section">
@@ -133,7 +133,7 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UTP3JKthFhg?si=k3Zb7y6mRvroM4Z9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#" class="get-script-btn" onclick="expandOrRedirect('symphony', 'https://example.com/script3')">GET SCRIPT HERE</a>
+        <a href="#symphony" class="get-script-btn" onclick="expandOrRedirect(event, 'symphony', 'https://example.com/script3')">GET SCRIPT HERE</a>
     </div>
 
     <div id="redz" class="script-section">
@@ -142,14 +142,14 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/zeYmj7_ukUk?si=I9mCcqciaISWjHel" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#" class="get-script-btn" onclick="expandOrRedirect('redz', 'https://example.com/script4')">GET SCRIPT HERE</a>
+        <a href="#redz" class="get-script-btn" onclick="expandOrRedirect(event, 'redz', 'https://example.com/script4')">GET SCRIPT HERE</a>
     </div>
 
     <script>
         // Variable to track the number of clicks
         var clickCounts = {};
 
-        function expandOrRedirect(id, link) {
+        function expandOrRedirect(event, id, link) {
             // Initialize click count for this section if not already done
             if (!clickCounts[id]) {
                 clickCounts[id] = 0;
@@ -182,8 +182,7 @@
 <div class="menu" id="menu">
     <a href="/home">Home</a>
     <a href="/scripts">Scripts</a>
-    <a href="/thanks-donation">Support me</a>
-    <a href="/donation">donate me</a>
+    <a href="/support-Me">Support me</a>
 </div>
 
 <style>
