--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
     <div class="menu" id="menu">
         <a href="/home">Home</a>
         <a href="/scripts">Scripts</a>
-        <a href="/thanks-donation">Support me</a>
-        <a href="/donation">Donate</a>
+    <a href="/support-Me">Support me</a>
     </div>
 
     <!-- SCRIPTS SECTIONS -->
