--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
     <!-- SCRIPTS SECTIONS -->
     <div id="renzxw" class="script-section">
         <h2>RenzXW LOCK</h2>
+         <h2>pinned 📍</h2>
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SrSuzTxhIqk?si=5X8otWXtptp6xX7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -240,7 +241,7 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UTP3JKthFhg?si=k3Zb7y6mRvroM4Z9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#symphony" class="get-script-btn" onclick="expandSection('symphony', 'https://example.com/script3')">GET SCRIPT HERE</a>
+        <a href="#symphony" class="get-script-btn" onclick="expandSection('symphony', 'https://rekonise.com/mm2-scriptt-3z10a')">GET SCRIPT HERE</a>
         </div>
 
     <div id="redz" class="script-section">
@@ -249,7 +250,7 @@
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/zeYmj7_ukUk?si=I9mCcqciaISWjHel" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <a href="#redz" class="get-script-btn" onclick="expandSection('redz', 'https://example.com/script4')">GET SCRIPT HERE</a>
+        <a href="#redz" class="get-script-btn" onclick="expandSection('redz', 'https://rekonise.com/redz-hub-v35-q1fx5')">GET SCRIPT HERE</a>
     </div>
 
     <!-- Additional script sections can be added below as needed -->
