--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@
         <a href="#redz" class="get-script-btn" onclick="expandSection('redz', 'https://rekonise.com/redz-hub-v35-q1fx5')">GET SCRIPT HERE</a>
     </div>
 
+     <div id="redz" class="script-section">
+        <h2>Build A Boat Auto buidl</h2>
+        <h3>Build a Boat</h3>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/DbQdaozSW9M?si=fJ2pf7kLg69GP1kB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>      </div>
+        <a href="#Auto-build" class="get-script-btn" onclick="expandSection('Auto-build','https://renzxw.github.io/Build-a-boat-auto-build/')">GET SCRIPT HERE</a>
+    </div>
+
     <!-- Additional script sections can be added below as needed -->
 
     <script>
